--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.agnieszka.kidneyapp20.MainActivity" />
         </activity>
+
+        <activity android:name="com.example.agnieszka.kidneyapp20.AndroidDatabaseManager"
+            android:theme="@style/Theme.AppCompat.Light"/>
     </application>
 
 </manifest>
