--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
             android:parentActivityName=".MainActivity"
             android:theme="@style/ForecastTheme" />
         <activity
+            android:name=".FoodJournal"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/ForecastTheme" />
+        <activity
         android:name=".TestActivity"
         android:parentActivityName=".AddingFood"
         android:theme="@style/ForecastTheme" />
